--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="item">
             <a href="#">
-                <i class="material-icons" >add_a_phot</i>
+                <i class="material-icons" >add</i>
             </a>
         </div>
         <div class="item">
